refactor: improve config structure